# serializer version: 1
# name: TestCalibration.test_matches_snapshot[PAX_119011650]
  dict({
    'валидация': dict({
      'V1': 'прошёл',
      'V2': 'прошёл',
      'V3': 'прошёл',
      'V4': 'прошёл',
      'V5': 'прошёл',
      'V6': 'прошёл',
    }),
    'локализации': dict({
      'AMBIGUOUS': 3,
      'ЛОКАЛИЗОВАНО': 42,
      'НЕ_ЛОКАЛИЗОВАНО': 10,
      'ОБЪЯСНЕНО_СТОРНО': 1,
      'ОТКАЗ_НИЖЕ_АГРЕГАТА_ПРОДАЖ': 52,
    }),
    'минимум_сальдо': '-1238.34',
    'находки': dict({
      'LATE_TIME_DOC': dict({
        'на_сальдо': '0.00',
        'уровень': 'ПРОВЕРИТЬ',
        'штук': 30,
      }),
      'LOG_IMBALANCE': dict({
        'на_сальдо': '-807.91',
        'уровень': 'ИНФО',
        'штук': 1,
      }),
      'PAYOUT_NOT_BOOKED': dict({
        'на_сальдо': '0.00',
        'уровень': 'ПРОВЕРИТЬ',
        'штук': 20,
      }),
      'PKO_DOUBLE_BOOKED': dict({
        'на_сальдо': '1846.99',
        'уровень': 'ОШИБКА',
        'штук': 2,
      }),
      'POSTING_DELAY': dict({
        'на_сальдо': '0.00',
        'уровень': 'ПРОВЕРИТЬ',
        'штук': 3,
      }),
      'REPEAT_PAYOUT': dict({
        'на_сальдо': '0.00',
        'уровень': 'ПРОВЕРИТЬ',
        'штук': 36,
      }),
      'REVERSAL_WITHOUT_REBOOK': dict({
        'на_сальдо': '1046.75',
        'уровень': 'ПРОВЕРИТЬ',
        'штук': 1,
      }),
      'RKO_OVERSTATED': dict({
        'на_сальдо': '-9145.76',
        'уровень': 'ОШИБКА',
        'штук': 20,
      }),
      'RKO_WITHOUT_PAYOUT': dict({
        'на_сальдо': '-1800.78',
        'уровень': 'ОШИБКА',
        'штук': 2,
      }),
      'SEQUENCE_GAP': dict({
        'на_сальдо': '0.00',
        'уровень': 'ИНФО',
        'штук': 3,
      }),
      'SERVICE_MISCLASSIFIED': dict({
        'на_сальдо': '0.00',
        'уровень': 'ИНФО',
        'штук': 1,
      }),
      'SHIFT_ROUNDING': dict({
        'на_сальдо': '0.00',
        'уровень': 'НОРМА',
        'штук': 1,
      }),
    }),
    'несведённый': '0.00',
    'первый_минус': '2025-12-19',
    'период': list([
      '2022-03-31',
      '2026-06-10',
    ]),
    'раскладка': list([
      dict({
        'документы': list([
          '00000174707',
        ]),
        'код': 'RKO_OVERSTATED',
        'сумма': '-2075.31',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
        ]),
        'код': 'PKO_DOUBLE_BOOKED',
        'сумма': '1822.12',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00289603',
          '00289605',
          '00290338',
          '00290339',
        ]),
        'код': 'RKO_WITHOUT_PAYOUT',
        'сумма': '-1414.28',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000164848',
        ]),
        'код': 'RKO_OVERSTATED',
        'сумма': '-1148.88',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00231245',
          '',
        ]),
        'код': 'REVERSAL_WITHOUT_REBOOK',
        'сумма': '1046.75',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000092498',
        ]),
        'код': 'RKO_OVERSTATED',
        'сумма': '-1039.44',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000153172',
        ]),
        'код': 'RKO_OVERSTATED',
        'сумма': '-1001.00',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000178408',
        ]),
        'код': 'RKO_OVERSTATED',
        'сумма': '-564.00',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000219076',
        ]),
        'код': 'RKO_OVERSTATED',
        'сумма': '-499.00',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000159006',
        ]),
        'код': 'RKO_OVERSTATED',
        'сумма': '-478.10',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000091683',
        ]),
        'код': 'RKO_OVERSTATED',
        'сумма': '-451.00',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000096942',
        ]),
        'код': 'RKO_WITHOUT_PAYOUT',
        'сумма': '-386.50',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000177897',
        ]),
        'код': 'RKO_OVERSTATED',
        'сумма': '-329.00',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000084956',
        ]),
        'код': 'RKO_OVERSTATED',
        'сумма': '-257.80',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000111834',
        ]),
        'код': 'RKO_OVERSTATED',
        'сумма': '-251.61',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000105989',
        ]),
        'код': 'RKO_OVERSTATED',
        'сумма': '-228.00',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000122456',
        ]),
        'код': 'RKO_OVERSTATED',
        'сумма': '-178.39',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000152718',
        ]),
        'код': 'RKO_OVERSTATED',
        'сумма': '-177.39',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000098893',
        ]),
        'код': 'RKO_OVERSTATED',
        'сумма': '-169.00',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000048047',
        ]),
        'код': 'RKO_OVERSTATED',
        'сумма': '-88.70',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000119290',
        ]),
        'код': 'RKO_OVERSTATED',
        'сумма': '-76.04',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000181051',
        ]),
        'код': 'RKO_OVERSTATED',
        'сумма': '-65.20',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000104928',
        ]),
        'код': 'RKO_OVERSTATED',
        'сумма': '-56.05',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
        ]),
        'код': 'PKO_DOUBLE_BOOKED',
        'сумма': '24.87',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00200593',
        ]),
        'код': 'RKO_OVERSTATED',
        'сумма': '-11.85',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '1275.15',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-566.10',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-300.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '275.01',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '156.96',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-150.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-119.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-100.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-100.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-100.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '90.40',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '81.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-80.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-70.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-70.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-65.60',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-60.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-60.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-59.88',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-50.77',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-50.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-46.22',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-40.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-40.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-30.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-30.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-25.74',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-20.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-20.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-19.64',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '19.42',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-17.53',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-17.04',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-16.62',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-15.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-15.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-14.89',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-13.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-10.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-9.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-7.95',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-5.93',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-5.61',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-5.16',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-5.01',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-4.70',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-4.32',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-2.40',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-1.33',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-1.06',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-1.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
          '00000469',
          '0000044602',
          '0000051999',
          '0000060683',
          '0000071380',
          '0000077584',
          '0000085318',
          '0000085749',
          '0000090480',
          '0000148031',
          '0000165607',
          '0000174073',
          '0000015123',
          '00166468',
          '0000016852',
          '0000017323',
          '0000025506',
          '0000047147',
          '0000058206',
          '0000073753',
          '1000004729',
          '1000021218',
          '1000033729',
          '1000029183',
          '1000077826',
          '00000000220',
          '00000015129',
          '00000046234',
          '00000049054',
          '00000054537',
          '00000059251',
          '00000064876',
          '00000075648',
          '00000078478',
          '12258160918',
          '00000519',
          '00000521',
          '12258202727',
          '12258233699',
          '12258254148',
          '12258254351',
          '12258255348',
          '12258337726',
          '00000288',
          '12258392001',
          '12258405961',
        ]),
        'код': None,
        'сумма': '-9828.74',
        'уровень': 'СТРУКТУРА',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-807.91',
        'уровень': 'СТРУКТУРА',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '18012.21',
        'уровень': 'ОСТАТОК',
      }),
    ]),
    'сальдо': '-1224.80',
    'сверка': dict({
      'ВОЗВРАТ': dict({
        '1С': '1075612.08',
        'ratio': '0.225613',
        'брутто': '44043.07',
        'верифицируется': True,
        'дней_с_расхождением': 96,
        'лог': '1085548.79',
        'нетто': '-9936.71',
      }),
      'ИНКАССАЦИЯ': dict({
        '1С': '12977844.10',
        'ratio': '0.000000',
        'брутто': '10358120.68',
        'верифицируется': True,
        'дней_с_расхождением': 1325,
        'лог': '12977844.10',
        'нетто': '0.00',
      }),
      'ПРИХОД': dict({
        '1С': '14062060.12',
        'ratio': '0.120067',
        'брутто': '4371.38',
        'верифицируется': True,
        'дней_с_расхождением': 52,
        'лог': '14062584.98',
        'нетто': '-524.86',
      }),
    }),
    'свёртка': dict({
      'ВОЗВРАТ': dict({
        'дней_в_остатке': 56,
        'дней_всего': 96,
        'лаг': 0,
        'остаток': '1673.71',
        'передатировано': 24,
        'снято': 40,
      }),
      'ИНКАССАЦИЯ': dict({
        'дней_в_остатке': 0,
        'дней_всего': 1325,
        'лаг': 1,
        'остаток': '0.00',
        'передатировано': 0,
        'снято': 1325,
      }),
      'ПРИХОД': dict({
        'дней_в_остатке': 52,
        'дней_всего': 52,
        'лаг': 0,
        'остаток': '-522.69',
        'передатировано': 0,
        'снято': 0,
      }),
    }),
    'целевое': '0.00',
  })
# ---
# name: TestCalibration.test_matches_snapshot[PAX_119023531]
  dict({
    'валидация': dict({
      'V1': 'прошёл',
      'V2': 'прошёл',
      'V3': 'прошёл',
      'V4': 'прошёл',
      'V5': 'прошёл',
      'V6': 'прошёл',
    }),
    'локализации': dict({
      'ЛОКАЛИЗОВАНО': 7,
      'НЕ_ЛОКАЛИЗОВАНО': 1,
      'ОТКАЗ_НИЖЕ_АГРЕГАТА_ПРОДАЖ': 8,
    }),
    'минимум_сальдо': '-1129.00',
    'находки': dict({
      'LATE_TIME_DOC': dict({
        'на_сальдо': '0.00',
        'уровень': 'ПРОВЕРИТЬ',
        'штук': 2,
      }),
      'LOG_IMBALANCE': dict({
        'на_сальдо': '-150.00',
        'уровень': 'ИНФО',
        'штук': 1,
      }),
      'PAYOUT_NOT_BOOKED': dict({
        'на_сальдо': '0.00',
        'уровень': 'ПРОВЕРИТЬ',
        'штук': 6,
      }),
      'PKO_DOUBLE_BOOKED': dict({
        'на_сальдо': '1400.00',
        'уровень': 'ОШИБКА',
        'штук': 1,
      }),
      'RKO_WITHOUT_PAYOUT': dict({
        'на_сальдо': '-2579.00',
        'уровень': 'ОШИБКА',
        'штук': 1,
      }),
      'SEQUENCE_GAP': dict({
        'на_сальдо': '0.00',
        'уровень': 'ИНФО',
        'штук': 3,
      }),
      'SHIFT_ROUNDING': dict({
        'на_сальдо': '0.00',
        'уровень': 'НОРМА',
        'штук': 1,
      }),
    }),
    'несведённый': '0.00',
    'первый_минус': '2023-08-09',
    'период': list([
      '2023-05-19',
      '2026-06-30',
    ]),
    'раскладка': list([
      dict({
        'документы': list([
          '00284721',
        ]),
        'код': 'RKO_WITHOUT_PAYOUT',
        'сумма': '-2579.00',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
        ]),
        'код': 'PKO_DOUBLE_BOOKED',
        'сумма': '1400.00',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-104.85',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-100.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-50.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-50.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-50.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-20.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-20.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '772.71',
        'уровень': 'КАТЕГОРИЯ',
      }),
      dict({
        'документы': list([
          '00000669',
          '00000729',
          '00000735',
          '0000075556',
          '00000086926',
          '00001297',
          '00001302',
          '12258168941',
          '00000369',
          '00000371',
          '12258323630',
        ]),
        'код': None,
        'сумма': '245.38',
        'уровень': 'СТРУКТУРА',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-150.00',
        'уровень': 'СТРУКТУРА',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '412.14',
        'уровень': 'ОСТАТОК',
      }),
    ]),
    'сальдо': '-293.62',
    'сверка': dict({
      'ВОЗВРАТ': dict({
        '1С': '96091.60',
        'ratio': '0.630967',
        'брутто': '3433.35',
        'верифицируется': True,
        'дней_с_расхождением': 11,
        'лог': '93925.27',
        'нетто': '2166.33',
      }),
      'ИНКАССАЦИЯ': dict({
        '1С': '1678887.71',
        'ratio': '0.000520',
        'брутто': '1485816.63',
        'верифицируется': True,
        'дней_с_расхождением': 870,
        'лог': '1679660.42',
        'нетто': '-772.71',
      }),
      'ПРИХОД': dict({
        '1С': '1774440.31',
        'ratio': '0.559558',
        'брутто': '1795.38',
        'верифицируется': True,
        'дней_с_расхождением': 8,
        'лог': '1773435.69',
        'нетто': '1004.62',
      }),
    }),
    'свёртка': dict({
      'ВОЗВРАТ': dict({
        'дней_в_остатке': 7,
        'дней_всего': 11,
        'лаг': 0,
        'остаток': '2166.33',
        'передатировано': 4,
        'снято': 4,
      }),
      'ИНКАССАЦИЯ': dict({
        'дней_в_остатке': 467,
        'дней_всего': 870,
        'лаг': 1,
        'остаток': '-773.57',
        'передатировано': 0,
        'снято': 403,
      }),
      'ПРИХОД': dict({
        'дней_в_остатке': 8,
        'дней_всего': 8,
        'лаг': 0,
        'остаток': '1005.15',
        'передатировано': 0,
        'снято': 0,
      }),
    }),
    'целевое': '0.00',
  })
# ---
# name: TestCalibration.test_matches_snapshot[PAX_119049688]
  dict({
    'валидация': dict({
      'V1': 'прошёл',
      'V2': 'прошёл',
      'V3': 'прошёл',
      'V4': 'прошёл',
      'V5': 'прошёл',
      'V6': 'прошёл',
    }),
    'локализации': dict({
      'ЛОКАЛИЗОВАНО': 1,
    }),
    'минимум_сальдо': '-160.89',
    'находки': dict({
      'REPEAT_PAYOUT': dict({
        'на_сальдо': '0.00',
        'уровень': 'ПРОВЕРИТЬ',
        'штук': 1,
      }),
      'RKO_OVERSTATED': dict({
        'на_сальдо': '-160.89',
        'уровень': 'ОШИБКА',
        'штук': 1,
      }),
      'SEQUENCE_GAP': dict({
        'на_сальдо': '0.00',
        'уровень': 'ИНФО',
        'штук': 1,
      }),
      'SHIFT_ROUNDING': dict({
        'на_сальдо': '0.00',
        'уровень': 'НОРМА',
        'штук': 1,
      }),
    }),
    'несведённый': '0.00',
    'первый_минус': '2026-06-03',
    'период': list([
      '2026-03-27',
      '2026-06-03',
    ]),
    'раскладка': list([
      dict({
        'документы': list([
          '00000257506',
        ]),
        'код': 'RKO_OVERSTATED',
        'сумма': '-160.89',
        'уровень': 'ДОКУМЕНТ',
      }),
    ]),
    'сальдо': '-160.89',
    'сверка': dict({
      'ВОЗВРАТ': dict({
        '1С': '45173.27',
        'ratio': '0.071474',
        'брутто': '2251.03',
        'верифицируется': True,
        'дней_с_расхождением': 7,
        'лог': '45012.38',
        'нетто': '160.89',
      }),
      'ИНКАССАЦИЯ': dict({
        '1С': '587835.72',
        'ratio': '0.000000',
        'брутто': '485821.92',
        'верифицируется': True,
        'дней_с_расхождением': 69,
        'лог': '587835.72',
        'нетто': '0.00',
      }),
      'ПРИХОД': dict({
        '1С': '632848.10',
        'ratio': None,
        'брутто': '0.00',
        'верифицируется': True,
        'дней_с_расхождением': 0,
        'лог': '632848.10',
        'нетто': '0.00',
      }),
    }),
    'свёртка': dict({
      'ВОЗВРАТ': dict({
        'дней_в_остатке': 1,
        'дней_всего': 7,
        'лаг': 0,
        'остаток': '160.89',
        'передатировано': 0,
        'снято': 6,
      }),
      'ИНКАССАЦИЯ': dict({
        'дней_в_остатке': 0,
        'дней_всего': 69,
        'лаг': 1,
        'остаток': '0.00',
        'передатировано': 0,
        'снято': 69,
      }),
      'ПРИХОД': dict({
        'дней_в_остатке': 0,
        'дней_всего': 0,
        'лаг': 0,
        'остаток': '0.00',
        'передатировано': 0,
        'снято': 0,
      }),
    }),
    'целевое': '0.00',
  })
# ---
# name: TestCalibration.test_matches_snapshot[\u041a\u0441\u0430_\u043d\u043e\u0440\u043c\u0430]
  dict({
    'валидация': dict({
      'V1': 'прошёл',
      'V2': 'прошёл',
      'V3': 'прошёл',
      'V4': 'прошёл',
      'V5': 'прошёл',
      'V6': 'НЕ ПРОШЁЛ',
    }),
    'локализации': dict({
      'ВНЕ_ПЕРИОДА_1С': 2,
      'ЛОКАЛИЗОВАНО': 4,
      'ОБЪЯСНЕНО_ТАЙМИНГОМ': 31,
    }),
    'минимум_сальдо': '4635.44',
    'находки': dict({
      'LOG_IMBALANCE': dict({
        'на_сальдо': '-632848.10',
        'уровень': 'ИНФО',
        'штук': 1,
      }),
      'PAYOUT_NOT_BOOKED': dict({
        'на_сальдо': '0.00',
        'уровень': 'ПРОВЕРИТЬ',
        'штук': 3,
      }),
      'PERIOD_CUTOFF': dict({
        'на_сальдо': '318592.18',
        'уровень': 'НОРМА',
        'штук': 1,
      }),
      'POSTING_DELAY': dict({
        'на_сальдо': '0.00',
        'уровень': 'ПРОВЕРИТЬ',
        'штук': 2,
      }),
      'REPEAT_PAYOUT': dict({
        'на_сальдо': '0.00',
        'уровень': 'ПРОВЕРИТЬ',
        'штук': 1,
      }),
      'RKO_WITHOUT_PAYOUT': dict({
        'на_сальдо': '-16888.05',
        'уровень': 'ОШИБКА',
        'штук': 1,
      }),
      'SEQUENCE_GAP': dict({
        'на_сальдо': '0.00',
        'уровень': 'ИНФО',
        'штук': 1,
      }),
      'SHIFT_ROUNDING': dict({
        'на_сальдо': '0.00',
        'уровень': 'НОРМА',
        'штук': 1,
      }),
    }),
    'несведённый': '0.00',
    'первый_минус': None,
    'период': list([
      '2026-03-27',
      '2026-04-30',
    ]),
    'раскладка': list([
      dict({
        'документы': list([
          '00000235131',
          '00000235132',
        ]),
        'код': 'RKO_WITHOUT_PAYOUT',
        'сумма': '-16888.05',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '27520.30',
        'уровень': 'ОСТАТОК',
      }),
    ]),
    'сальдо': '10632.25',
    'сверка': dict({
      'ВОЗВРАТ': dict({
        '1С': '17574.88',
        'ratio': '0.955160',
        'брутто': '28725.54',
        'верифицируется': True,
        'дней_с_расхождением': 35,
        'лог': '45012.38',
        'нетто': '-27437.50',
      }),
      'ИНКАССАЦИЯ': dict({
        '1С': '269243.54',
        'ratio': '0.592308',
        'брутто': '537882.44',
        'верифицируется': True,
        'дней_с_расхождением': 68,
        'лог': '587835.72',
        'нетто': '-318592.18',
      }),
      'ПРИХОД': dict({
        '1С': '297450.67',
        'ratio': '1.000000',
        'брутто': '297450.67',
        'верифицируется': False,
        'дней_с_расхождением': 0,
        'лог': '0.00',
        'нетто': '297450.67',
      }),
    }),
    'свёртка': dict({
      'ВОЗВРАТ': dict({
        'дней_в_остатке': 33,
        'дней_всего': 35,
        'лаг': 0,
        'остаток': '-27437.50',
        'передатировано': 0,
        'снято': 2,
      }),
      'ИНКАССАЦИЯ': dict({
        'дней_в_остатке': 68,
        'дней_всего': 68,
        'лаг': 1,
        'остаток': '-318592.18',
        'передатировано': 0,
        'снято': 0,
      }),
      'ПРИХОД': dict({
        'дней_в_остатке': 0,
        'дней_всего': 0,
        'лаг': 0,
        'остаток': '0.00',
        'передатировано': 0,
        'снято': 0,
      }),
    }),
    'целевое': '0.00',
  })
# ---
# name: TestCalibration.test_matches_snapshot[\u041a\u0441\u0430_\u0441_\u043e\u0442\u043a\u043b\u043e\u043d\u0435\u043d\u0438\u0435\u043c]
  dict({
    'валидация': dict({
      'V1': 'прошёл',
      'V2': 'прошёл',
      'V3': 'прошёл',
      'V4': 'прошёл',
      'V5': 'прошёл',
      'V6': 'прошёл',
    }),
    'локализации': dict({
      'ЛОКАЛИЗОВАНО': 6,
      'НЕ_ЛОКАЛИЗОВАНО': 1,
    }),
    'минимум_сальдо': '-708.01',
    'находки': dict({
      'LATE_TIME_DOC': dict({
        'на_сальдо': '0.00',
        'уровень': 'ПРОВЕРИТЬ',
        'штук': 3,
      }),
      'LOG_IMBALANCE': dict({
        'на_сальдо': '-2976031.58',
        'уровень': 'ИНФО',
        'штук': 1,
      }),
      'PAYOUT_NOT_BOOKED': dict({
        'на_сальдо': '0.00',
        'уровень': 'ПРОВЕРИТЬ',
        'штук': 3,
      }),
      'POSTING_DELAY': dict({
        'на_сальдо': '0.00',
        'уровень': 'ПРОВЕРИТЬ',
        'штук': 1,
      }),
      'REPEAT_PAYOUT': dict({
        'на_сальдо': '0.00',
        'уровень': 'ПРОВЕРИТЬ',
        'штук': 4,
      }),
      'REVERSAL_UNMATCHED': dict({
        'на_сальдо': '-40.00',
        'уровень': 'ПРОВЕРИТЬ',
        'штук': 1,
      }),
      'RKO_WITHOUT_PAYOUT': dict({
        'на_сальдо': '-830.82',
        'уровень': 'ОШИБКА',
        'штук': 3,
      }),
      'SEQUENCE_GAP': dict({
        'на_сальдо': '0.00',
        'уровень': 'ИНФО',
        'штук': 3,
      }),
      'SHIFT_ROUNDING': dict({
        'на_сальдо': '0.00',
        'уровень': 'НОРМА',
        'штук': 1,
      }),
    }),
    'несведённый': '0.00',
    'первый_минус': '2024-04-16',
    'период': list([
      '2023-05-19',
      '2025-11-10',
    ]),
    'раскладка': list([
      dict({
        'документы': list([
          '00000171208',
        ]),
        'код': 'RKO_WITHOUT_PAYOUT',
        'сумма': '-602.85',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00314550',
        ]),
        'код': 'RKO_WITHOUT_PAYOUT',
        'сумма': '-123.30',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00265739',
        ]),
        'код': 'RKO_WITHOUT_PAYOUT',
        'сумма': '-104.67',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '12258217680',
        ]),
        'код': 'REVERSAL_UNMATCHED',
        'сумма': '-40.00',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-4038.06',
        'уровень': 'КАТЕГОРИЯ',
      }),
      dict({
        'документы': list([
          '00000707',
          '1000020768',
          '00000007934',
          '00000017346',
          '00000021391',
          '00000044819',
          '00000096765',
          '00000115490',
          '00000141163',
          '00000485',
          '00000490',
          '12258177397',
          '12258218575',
          '12258224725',
          '12258295570',
          '00002809',
          '00002811',
          '00002935',
        ]),
        'код': None,
        'сумма': '863.14',
        'уровень': 'СТРУКТУРА',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '3337.73',
        'уровень': 'ОСТАТОК',
      }),
    ]),
    'сальдо': '-708.01',
    'сверка': dict({
      'ВОЗВРАТ': dict({
        '1С': '128566.18',
        'ratio': '0.086581',
        'брутто': '5930.97',
        'верифицируется': True,
        'дней_с_расхождением': 22,
        'лог': '128052.67',
        'нетто': '513.51',
      }),
      'ИНКАССАЦИЯ': dict({
        '1С': '2852016.97',
        'ratio': '0.001510',
        'брутто': '2674814.00',
        'верифицируется': True,
        'дней_с_расхождением': 817,
        'лог': '2847978.91',
        'нетто': '4038.06',
      }),
      'ПРИХОД': dict({
        '1С': '2979012.00',
        'ratio': '1.000000',
        'брутто': '2979012.00',
        'верифицируется': False,
        'дней_с_расхождением': 0,
        'лог': '0.00',
        'нетто': '2979012.00',
      }),
    }),
    'свёртка': dict({
      'ВОЗВРАТ': dict({
        'дней_в_остатке': 6,
        'дней_всего': 22,
        'лаг': 0,
        'остаток': '663.51',
        'передатировано': 8,
        'снято': 16,
      }),
      'ИНКАССАЦИЯ': dict({
        'дней_в_остатке': 810,
        'дней_всего': 817,
        'лаг': 1,
        'остаток': '4038.06',
        'передатировано': 0,
        'снято': 7,
      }),
      'ПРИХОД': dict({
        'дней_в_остатке': 0,
        'дней_всего': 0,
        'лаг': 0,
        'остаток': '0.00',
        'передатировано': 0,
        'снято': 0,
      }),
    }),
    'целевое': '0.00',
  })
# ---
# name: TestCalibration.test_matches_snapshot[\u041c\u0430\u043a\u0441\u0438\u043c\u0443_3]
  dict({
    'валидация': dict({
      'V1': 'прошёл',
      'V2': 'прошёл',
      'V3': 'прошёл',
      'V4': 'прошёл',
      'V5': 'прошёл',
      'V6': 'прошёл',
    }),
    'локализации': dict({
      'НЕ_ЛОКАЛИЗОВАНО': 1,
      'ОТКАЗ_НИЖЕ_АГРЕГАТА_ПРОДАЖ': 6,
    }),
    'минимум_сальдо': '-1372.73',
    'находки': dict({
      'LATE_TIME_DOC': dict({
        'на_сальдо': '0.00',
        'уровень': 'ПРОВЕРИТЬ',
        'штук': 1,
      }),
      'REPEAT_PAYOUT': dict({
        'на_сальдо': '0.00',
        'уровень': 'ПРОВЕРИТЬ',
        'штук': 1,
      }),
      'REVERSAL_PAIR': dict({
        'на_сальдо': '0.00',
        'уровень': 'ИНФО',
        'штук': 1,
      }),
      'SEQUENCE_GAP': dict({
        'на_сальдо': '0.00',
        'уровень': 'ИНФО',
        'штук': 1,
      }),
      'SHIFT_ROUNDING': dict({
        'на_сальдо': '0.00',
        'уровень': 'НОРМА',
        'штук': 1,
      }),
    }),
    'несведённый': '0.00',
    'первый_минус': '2025-01-03',
    'период': list([
      '2024-12-17',
      '2026-05-01',
    ]),
    'раскладка': list([
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '439.33',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-35.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-30.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-25.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-20.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-9.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '8.94',
        'уровень': 'КАТЕГОРИЯ',
      }),
      dict({
        'документы': list([
          '12258371202',
          '12258379966',
          '12258383037',
          '12258384732',
          '12258390355',
        ]),
        'код': None,
        'сумма': '119.00',
        'уровень': 'СТРУКТУРА',
      }),
    ]),
    'сальдо': '448.27',
    'сверка': dict({
      'ВОЗВРАТ': dict({
        '1С': '30608.07',
        'ratio': '0.001978',
        'брутто': '4520.56',
        'верифицируется': True,
        'дней_с_расхождением': 15,
        'лог': '30617.01',
        'нетто': '-8.94',
      }),
      'ИНКАССАЦИЯ': dict({
        '1С': '548812.62',
        'ratio': '0.000000',
        'брутто': '475574.82',
        'верифицируется': True,
        'дней_с_расхождением': 59,
        'лог': '548812.62',
        'нетто': '0.00',
      }),
      'ПРИХОД': dict({
        '1С': '579749.96',
        'ratio': '0.573729',
        'брутто': '558.33',
        'верифицируется': True,
        'дней_с_расхождением': 6,
        'лог': '579429.63',
        'нетто': '320.33',
      }),
    }),
    'свёртка': dict({
      'ВОЗВРАТ': dict({
        'дней_в_остатке': 11,
        'дней_всего': 15,
        'лаг': 0,
        'остаток': '-8.94',
        'передатировано': 4,
        'снято': 4,
      }),
      'ИНКАССАЦИЯ': dict({
        'дней_в_остатке': 0,
        'дней_всего': 59,
        'лаг': 1,
        'остаток': '0.00',
        'передатировано': 0,
        'снято': 59,
      }),
      'ПРИХОД': dict({
        'дней_в_остатке': 6,
        'дней_всего': 6,
        'лаг': 0,
        'остаток': '320.33',
        'передатировано': 0,
        'снято': 0,
      }),
    }),
    'целевое': '0.00',
  })
# ---
# name: TestCalibration.test_matches_snapshot[\u041c\u0430\u043a\u0441\u0438\u043c\u0443_\u043a\u0430\u0441\u0441\u0430_2]
  dict({
    'валидация': dict({
      'V1': 'прошёл',
      'V2': 'прошёл',
      'V3': 'прошёл',
      'V4': 'прошёл',
      'V5': 'прошёл',
      'V6': 'НЕ ПРОШЁЛ',
    }),
    'локализации': dict({
      'ВНЕ_ПЕРИОДА_1С': 2,
      'ЛОКАЛИЗОВАНО': 29,
      'ОБЪЯСНЕНО_ТАЙМИНГОМ': 638,
    }),
    'минимум_сальдо': '-51.80',
    'находки': dict({
      'LATE_TIME_DOC': dict({
        'на_сальдо': '0.00',
        'уровень': 'ПРОВЕРИТЬ',
        'штук': 1,
      }),
      'LOG_IMBALANCE': dict({
        'на_сальдо': '-5095168.73',
        'уровень': 'ИНФО',
        'штук': 1,
      }),
      'PAYOUT_NOT_BOOKED': dict({
        'на_сальдо': '0.00',
        'уровень': 'ПРОВЕРИТЬ',
        'штук': 18,
      }),
      'PERIOD_CUTOFF': dict({
        'на_сальдо': '217581.09',
        'уровень': 'НОРМА',
        'штук': 1,
      }),
      'POSTING_DELAY': dict({
        'на_сальдо': '0.00',
        'уровень': 'ПРОВЕРИТЬ',
        'штук': 16,
      }),
      'REPEAT_PAYOUT': dict({
        'на_сальдо': '0.00',
        'уровень': 'ПРОВЕРИТЬ',
        'штук': 2,
      }),
      'RKO_WITHOUT_PAYOUT': dict({
        'на_сальдо': '-74462.99',
        'уровень': 'ОШИБКА',
        'штук': 11,
      }),
      'SEQUENCE_GAP': dict({
        'на_сальдо': '0.00',
        'уровень': 'ИНФО',
        'штук': 3,
      }),
      'SHIFT_ROUNDING': dict({
        'на_сальдо': '0.00',
        'уровень': 'НОРМА',
        'штук': 1,
      }),
    }),
    'несведённый': '0.00',
    'первый_минус': '2026-01-09',
    'период': list([
      '2023-05-19',
      '2026-04-30',
    ]),
    'раскладка': list([
      dict({
        'документы': list([
          '00000145376',
          '00000145377',
        ]),
        'код': 'RKO_WITHOUT_PAYOUT',
        'сумма': '-14127.51',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000001405',
          '00000001459',
        ]),
        'код': 'RKO_WITHOUT_PAYOUT',
        'сумма': '-11644.16',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000184119',
          '00000184117',
        ]),
        'код': 'RKO_WITHOUT_PAYOUT',
        'сумма': '-9690.40',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000000510',
        ]),
        'код': 'RKO_WITHOUT_PAYOUT',
        'сумма': '-7622.75',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000234987',
          '00000234991',
        ]),
        'код': 'RKO_WITHOUT_PAYOUT',
        'сумма': '-7010.79',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000093474',
          '00000093475',
        ]),
        'код': 'RKO_WITHOUT_PAYOUT',
        'сумма': '-6910.07',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000059121',
        ]),
        'код': 'RKO_WITHOUT_PAYOUT',
        'сумма': '-6089.64',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000065296',
        ]),
        'код': 'RKO_WITHOUT_PAYOUT',
        'сумма': '-5839.68',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000158585',
        ]),
        'код': 'RKO_WITHOUT_PAYOUT',
        'сумма': '-5335.90',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000160920',
        ]),
        'код': 'RKO_WITHOUT_PAYOUT',
        'сумма': '-135.06',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000121142',
        ]),
        'код': 'RKO_WITHOUT_PAYOUT',
        'сумма': '-57.03',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000667',
          '1000065178',
          '1000073158',
          '00000071069',
          '12258158316',
          '12258165128',
          '12258170578',
          '00000265',
          '00000266',
          '12258307795',
          '00000003289',
        ]),
        'код': None,
        'сумма': '439.85',
        'уровень': 'СТРУКТУРА',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '76640.93',
        'уровень': 'ОСТАТОК',
      }),
    ]),
    'сальдо': '2617.79',
    'сверка': dict({
      'ВОЗВРАТ': dict({
        '1С': '276862.25',
        'ratio': '0.619346',
        'брутто': '14665.75',
        'верифицируется': True,
        'дней_с_расхождением': 53,
        'лог': '285945.42',
        'нетто': '-9083.17',
      }),
      'ИНКАССАЦИЯ': dict({
        '1С': '4591642.22',
        'ratio': '0.052075',
        'брутто': '4178253.69',
        'верифицируется': True,
        'дней_с_расхождением': 1091,
        'лог': '4809223.31',
        'нетто': '-217581.09',
      }),
      'ПРИХОД': dict({
        '1С': '4870682.41',
        'ratio': '1.000000',
        'брутто': '4870682.41',
        'верифицируется': False,
        'дней_с_расхождением': 0,
        'лог': '0.00',
        'нетто': '4870682.41',
      }),
    }),
    'свёртка': dict({
      'ВОЗВРАТ': dict({
        'дней_в_остатке': 29,
        'дней_всего': 53,
        'лаг': 0,
        'остаток': '-9033.17',
        'передатировано': 2,
        'снято': 24,
      }),
      'ИНКАССАЦИЯ': dict({
        'дней_в_остатке': 713,
        'дней_всего': 1091,
        'лаг': 1,
        'остаток': '-217581.58',
        'передатировано': 0,
        'снято': 378,
      }),
      'ПРИХОД': dict({
        'дней_в_остатке': 0,
        'дней_всего': 0,
        'лаг': 0,
        'остаток': '0.00',
        'передатировано': 0,
        'снято': 0,
      }),
    }),
    'целевое': '0.00',
  })
# ---
# name: TestCalibration.test_matches_snapshot[\u0429\u0443\u0447\u0438\u043d]
  dict({
    'валидация': dict({
      'V1': 'прошёл',
      'V2': 'прошёл',
      'V3': 'прошёл',
      'V4': 'прошёл',
      'V5': 'прошёл',
      'V6': 'НЕ ПРОШЁЛ',
    }),
    'локализации': dict({
      'AMBIGUOUS': 1,
      'ЛОКАЛИЗОВАНО': 6,
      'НЕ_ЛОКАЛИЗОВАНО': 1,
      'ОТКАЗ_НИЖЕ_АГРЕГАТА_ПРОДАЖ': 9,
    }),
    'минимум_сальдо': '-4952.36',
    'находки': dict({
      'LATE_TIME_DOC': dict({
        'на_сальдо': '0.00',
        'уровень': 'ПРОВЕРИТЬ',
        'штук': 3,
      }),
      'LOG_IMBALANCE': dict({
        'на_сальдо': '100.00',
        'уровень': 'ИНФО',
        'штук': 1,
      }),
      'PAYOUT_NOT_BOOKED': dict({
        'на_сальдо': '0.00',
        'уровень': 'ПРОВЕРИТЬ',
        'штук': 6,
      }),
      'PERIOD_CUTOFF': dict({
        'на_сальдо': '8301.10',
        'уровень': 'НОРМА',
        'штук': 1,
      }),
      'REPEAT_PAYOUT': dict({
        'на_сальдо': '0.00',
        'уровень': 'ПРОВЕРИТЬ',
        'штук': 3,
      }),
      'SEQUENCE_GAP': dict({
        'на_сальдо': '0.00',
        'уровень': 'ИНФО',
        'штук': 3,
      }),
      'SHIFT_ROUNDING': dict({
        'на_сальдо': '0.00',
        'уровень': 'НОРМА',
        'штук': 1,
      }),
    }),
    'несведённый': '0.00',
    'первый_минус': '2026-05-08',
    'период': list([
      '2023-05-19',
      '2026-05-12',
    ]),
    'раскладка': list([
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-5353.96',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-4660.08',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-3641.02',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-1785.63',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-100.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-100.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-50.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-30.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-30.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '8301.10',
        'уровень': 'КАТЕГОРИЯ',
      }),
      dict({
        'документы': list([
          '00000642',
          '00000007214',
          '00000538',
          '00000543',
          '12258321544',
          '12258332938',
        ]),
        'код': None,
        'сумма': '260.00',
        'уровень': 'СТРУКТУРА',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '100.00',
        'уровень': 'СТРУКТУРА',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '2137.23',
        'уровень': 'ОСТАТОК',
      }),
    ]),
    'сальдо': '-4952.36',
    'сверка': dict({
      'ВОЗВРАТ': dict({
        '1С': '88790.91',
        'ratio': '0.518052',
        'брутто': '4125.51',
        'верифицируется': True,
        'дней_с_расхождением': 17,
        'лог': '90928.14',
        'нетто': '-2137.23',
      }),
      'ИНКАССАЦИЯ': dict({
        '1С': '1984077.95',
        'ratio': '0.004753',
        'брутто': '1746501.98',
        'верифицируется': True,
        'дней_с_расхождением': 757,
        'лог': '1992379.05',
        'нетто': '-8301.10',
      }),
      'ПРИХОД': dict({
        '1С': '2067656.50',
        'ratio': '1.000000',
        'брутто': '15750.69',
        'верифицируется': True,
        'дней_с_расхождением': 9,
        'лог': '2083407.19',
        'нетто': '-15750.69',
      }),
    }),
    'свёртка': dict({
      'ВОЗВРАТ': dict({
        'дней_в_остатке': 7,
        'дней_всего': 17,
        'лаг': 0,
        'остаток': '-2086.48',
        'передатировано': 4,
        'снято': 10,
      }),
      'ИНКАССАЦИЯ': dict({
        'дней_в_остатке': 79,
        'дней_всего': 757,
        'лаг': 1,
        'остаток': '-8301.10',
        'передатировано': 0,
        'снято': 678,
      }),
      'ПРИХОД': dict({
        'дней_в_остатке': 9,
        'дней_всего': 9,
        'лаг': 0,
        'остаток': '-15750.69',
        'передатировано': 0,
        'снято': 0,
      }),
    }),
    'целевое': '0.00',
  })
# ---
# name: TestCalibration.test_matches_snapshot[\u0433\u043e\u0440\u043d\u043e\u0432\u044b\u0445]
  dict({
    'валидация': dict({
      'V1': 'прошёл',
      'V2': 'прошёл',
      'V3': 'прошёл',
      'V4': 'прошёл',
      'V5': 'прошёл',
      'V6': 'прошёл',
    }),
    'локализации': dict({
      'ЛОКАЛИЗОВАНО': 3,
      'ОБЪЯСНЕНО_СТОРНО': 2,
      'ОТКАЗ_НИЖЕ_АГРЕГАТА_ПРОДАЖ': 2,
    }),
    'минимум_сальдо': '-964.45',
    'находки': dict({
      'REPEAT_PAYOUT': dict({
        'на_сальдо': '0.00',
        'уровень': 'ПРОВЕРИТЬ',
        'штук': 1,
      }),
      'REVERSAL_PAIR': dict({
        'на_сальдо': '0.00',
        'уровень': 'ИНФО',
        'штук': 2,
      }),
      'RKO_OVERSTATED': dict({
        'на_сальдо': '-712.05',
        'уровень': 'ОШИБКА',
        'штук': 2,
      }),
      'RKO_WITHOUT_PAYOUT': dict({
        'на_сальдо': '-634.95',
        'уровень': 'ОШИБКА',
        'штук': 1,
      }),
      'SEQUENCE_GAP': dict({
        'на_сальдо': '0.00',
        'уровень': 'ИНФО',
        'штук': 1,
      }),
      'SHIFT_ROUNDING': dict({
        'на_сальдо': '0.00',
        'уровень': 'НОРМА',
        'штук': 1,
      }),
    }),
    'несведённый': '0.00',
    'первый_минус': '2025-08-29',
    'период': list([
      '2025-06-17',
      '2026-02-11',
    ]),
    'раскладка': list([
      dict({
        'документы': list([
          '00000134765',
          '00000134850',
        ]),
        'код': 'RKO_WITHOUT_PAYOUT',
        'сумма': '-634.95',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000114108',
        ]),
        'код': 'RKO_OVERSTATED',
        'сумма': '-366.42',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
          '00000198752',
        ]),
        'код': 'RKO_OVERSTATED',
        'сумма': '-345.63',
        'уровень': 'ДОКУМЕНТ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-50.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '-20.00',
        'уровень': 'ДЕНЬ',
      }),
      dict({
        'документы': list([
          '12258270337',
          '12258373405',
        ]),
        'код': None,
        'сумма': '70.00',
        'уровень': 'СТРУКТУРА',
      }),
      dict({
        'документы': list([
        ]),
        'код': None,
        'сумма': '1093.20',
        'уровень': 'ОСТАТОК',
      }),
    ]),
    'сальдо': '-253.80',
    'сверка': dict({
      'ВОЗВРАТ': dict({
        '1С': '56164.70',
        'ratio': '0.061753',
        'брутто': '4854.82',
        'верифицируется': True,
        'дней_с_расхождением': 21,
        'лог': '55864.90',
        'нетто': '299.80',
      }),
      'ИНКАССАЦИЯ': dict({
        '1С': '714423.59',
        'ratio': '0.000000',
        'брутто': '702428.78',
        'верифицируется': True,
        'дней_с_расхождением': 105,
        'лог': '714423.59',
        'нетто': '0.00',
      }),
      'ПРИХОД': dict({
        '1С': '770218.49',
        'ratio': '1.000000',
        'брутто': '70.00',
        'верифицируется': True,
        'дней_с_расхождением': 2,
        'лог': '770288.49',
        'нетто': '-70.00',
      }),
    }),
    'свёртка': dict({
      'ВОЗВРАТ': dict({
        'дней_в_остатке': 5,
        'дней_всего': 21,
        'лаг': 0,
        'остаток': '299.80',
        'передатировано': 8,
        'снято': 16,
      }),
      'ИНКАССАЦИЯ': dict({
        'дней_в_остатке': 0,
        'дней_всего': 105,
        'лаг': 1,
        'остаток': '0.00',
        'передатировано': 0,
        'снято': 105,
      }),
      'ПРИХОД': dict({
        'дней_в_остатке': 2,
        'дней_всего': 2,
        'лаг': 0,
        'остаток': '-70.00',
        'передатировано': 0,
        'снято': 0,
      }),
    }),
    'целевое': '0.00',
  })
# ---
